updated build.gradle Updated GeminiKeywordExtractor
This now allows for the use of the gemini api key for key word extraction.