@@ -1,57 +1,90 @@
 package edu.gcc.BitwiseWizards;
 
-import java.net.http.*;
-import java.net.URI;
+import okhttp3.*;
+import org.json.JSONArray;
+import org.json.JSONObject;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
-import com.google.gson.*;
+import java.util.stream.Collectors;
+import java.util.Properties;
 
 public class GeminiKeywordExtractor {
-
-    private static final String API_URL = "https://generativelanguage.googleapis.com/v1beta3/models/gemini-pro:generateContent";
+    private final OkHttpClient client = new OkHttpClient();
     private final String apiKey;
 
-    public GeminiKeywordExtractor(String apiKey) {
-        this.apiKey = apiKey;
+    public GeminiKeywordExtractor() {
+        this.apiKey = loadApiKeyFromConfig();
     }
 
-    public List<String> extractKeywords(String query) throws Exception {
-        HttpClient client = HttpClient.newHttpClient();
-
-        String prompt = "Extract relevant academic subject keywords (e.g. math, writing, psychology, accounting) from the student query: \"" + query + "\". Return only keywords as a comma-separated list.";
-
-        String bodyJson = """
-        {
-          "contents": [
-            {
-              "parts": [
-                {
-                  "text": "%s"
-                }
-              ]
-            }
-          ]
+    // Load the API key from config.properties
+    private String loadApiKeyFromConfig() {
+        try (InputStream input = getClass().getClassLoader().getResourceAsStream("config.properties")) {
+            Properties prop = new Properties();
+            prop.load(input);
+            return prop.getProperty("GEMINI_API_KEY");
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to load API key from config.properties", e);
         }
-        """.formatted(prompt);
+    }
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(API_URL + "?key=" + apiKey))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(bodyJson))
+    // Read query from a file and extract keywords
+    public List<String> extractFromFile(String filePath) throws IOException {
+        String content = new String(Files.readAllBytes(Paths.get(filePath)));
+        return extractKeywords(content);
+    }
+
+    // Send user input to Gemini and get keywords back
+    public List<String> extractKeywords(String inputText) throws IOException {
+        String prompt = """
+        Extract relevant keywords from the following course search query. Keywords should include:
+        - Professor names
+        - Course titles or topics
+        - Department codes
+        - Days of the week
+        - Time of day (like morning/evening)
+        - Semester info
+        
+        Respond ONLY with a comma-separated list of keywords, no full sentences.
+        
+        Query:
+        """ + inputText;
+
+        JSONObject requestBody = new JSONObject()
+                .put("contents", new JSONArray().put(new JSONObject()
+                        .put("parts", new JSONArray().put(new JSONObject().put("text", prompt)))))
+                .put("generationConfig", new JSONObject()
+                        .put("temperature", 0.7)
+                        .put("maxOutputTokens", 100));
+
+        Request request = new Request.Builder()
+                .url("https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent")
+                .addHeader("Content-Type", "application/json")
+                .addHeader("Authorization", "Bearer " + apiKey)
+                .post(RequestBody.create(requestBody.toString(), MediaType.parse("application/json")))
                 .build();
 
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        try (Response response = client.newCall(request).execute()) {
+            if (!response.isSuccessful()) {
+                throw new IOException("Gemini API failed: " + response.body().string());
+            }
 
-        JsonObject json = JsonParser.parseString(response.body()).getAsJsonObject();
-        String keywordString = json.getAsJsonArray("candidates")
-                .get(0).getAsJsonObject()
-                .getAsJsonObject("content")
-                .getAsJsonArray("parts")
-                .get(0).getAsJsonObject()
-                .get("text").getAsString();
+            JSONObject json = new JSONObject(response.body().string());
+            String text = json
+                    .getJSONArray("candidates")
+                    .getJSONObject(0)
+                    .getJSONObject("content")
+                    .getJSONArray("parts")
+                    .getJSONObject(0)
+                    .getString("text");
 
-        return Arrays.stream(keywordString.split(","))
-                .map(String::trim)
-                .map(String::toLowerCase)
-                .toList();
+            return Arrays.stream(text.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .collect(Collectors.toList());
+        }
     }
 }
